--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,7 @@ cryptography==2.3.1
 docopt==0.6.2
 enum34==1.1.6
 Flask==1.0.2
-<<<<<<< HEAD
-=======
 Flask-JWT-Extended==3.12.1
->>>>>>> ft-api
 gunicorn==19.9.0
 idna==2.7
 ipaddress==1.0.22
@@ -20,13 +17,10 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 nose==1.3.7
-<<<<<<< HEAD
-pycparser==2.18
-=======
 passlib==1.7.1
+psycopg2==2.7.5
 pycparser==2.18
 PyJWT==1.6.4
->>>>>>> ft-api
 pyOpenSSL==18.0.0
 requests==2.19.1
 six==1.11.0
